--- a/src/resources/source/css/calendar.css
+++ b/src/resources/source/css/calendar.css
@@ -1,20 +1,17 @@
-div.calendar
-{
+div.calendar {
   font-size: 1rem;
   color: #3e3e3e;
 }
 
-div.calendar.popup
-{
+div.calendar.popup {
   margin-left: 0;
   margin-top: 3.25rem;
   z-index: 9999;
 }
 
-div.calendar table
-{
-  width: 25rem; 
-  background-color: #ffffff;
+div.calendar table {
+  width: 20rem; 
+  background-color: white;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   border: none;
   border-collapse: separate;
@@ -27,75 +24,68 @@ div.calendar td.button {
 }
 
 div.calendar td,
-div.calendar th
-{
+div.calendar th {
   text-align: center;
   vertical-align: middle;
-  padding: 0.5rem 1rem 0.5rem 0;
+  padding: 0.5rem 0.75rem 0.5rem 0;
 }
 
-div.calendar td.title
-{
-  font-weight: bold;
-  color: #000;
+div.calendar td.title {
+  font-weight: normal;
+  padding: 0.5rem 0;
 }
 
-div.calendar th
-{
+div.calendar th {
   text-align: right;
+  font-weight: normal;
+}
+
+div.calendar th.weekend {
+  color: orangered;
   font-weight: bold;
 }
 
 div.calendar tr.days td {
   width: 14%;
-  color: #000;
+  color: black;
   text-align: right;
   vertical-align: middle;
   cursor: pointer;
-  border: 1px solid #fff;
+  border: 1px solid transparent;
 }
 
 div.calendar tr.days td:hover,
-div.calendar td.button:hover
-{
-  border-color: #ff7e00;
+div.calendar td.button:hover {
   background-color: #e5e5e5;
   cursor: pointer;
 }
 
-div.calendar tr.days td:hover
-{
-  background-color: #fff;
+div.calendar tr.days td:hover {
+  border-color: #ff7e00;
+  background-color: white;
 }
 
 div.calendar tr.days td:active
-div.calendar td.button:active
-{
+div.calendar td.button:active {
+  border-color: #cde;
   background-color: #cde;
 }
 
-div.calendar tr.days td.selected
-{
+div.calendar tr.days td.selected,
+div.calendar tr.days td.weekend.selected {
   font-weight: bold;
-  background-color: #fbf7b2;
-  border-color: #fbf7b2 !important;
-  color: #000 !important;
+  border-color: royalblue;
+  background-color: royalblue;
+  color: white;
 }
 
-th.weekend {color: #e85000;}
-
-div.calendar tr.days td.weekend {
-  color: #000;
-}
-
-div.calendar tr.days td.today
-{
+div.calendar tr.days td.today {
   border-color: #ccc;
+  background-color: #ccc;
+  color: black;
 }
 
-div.calendar tr.days td.otherDay
-{
-  background: #e5e5e5;
+div.calendar tr.days td.otherDay {
+  background-color: #e5e5e5;
   color: #999;
-  border: 1px solid #e5e5e5;
 }
