--- a/src/resources/source/css/calendar.css
+++ b/src/resources/source/css/calendar.css
@@ -10,7 +10,6 @@ div.calendar.popup {
 }
 
 div.calendar table {
-  width: 20rem; 
   background-color: white;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
   border: none;
@@ -27,7 +26,7 @@ div.calendar td,
 div.calendar th {
   text-align: center;
   vertical-align: middle;
-  padding: 0.5rem 0.75rem 0.5rem 0;
+  padding: 0.5rem;
 }
 
 div.calendar td.title {
@@ -46,7 +45,6 @@ div.calendar th.weekend {
 }
 
 div.calendar tr.days td {
-  width: 14%;
   color: black;
   text-align: right;
   vertical-align: middle;
@@ -80,8 +78,8 @@ div.calendar tr.days td.weekend.selected {
 }
 
 div.calendar tr.days td.today {
-  border-color: #ccc;
-  background-color: #ccc;
+  border-color: #789;
+  background-color: white;
   color: black;
 }
 
