--- a/src/resources/source/css/log.css
+++ b/src/resources/source/css/log.css
@@ -55,8 +55,24 @@ ul.log li div.avatar {
 ul.log li .avatar img {
   width: 3rem;
   height: 3rem;
-  border: 1px solid #ccc;
   border-radius: 50%;
+}
+
+ul.log li .avatar .round-letter {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 3rem;
+  font-family: sans-serif;
+  font-size: 1.6rem;
+  background-color: silver;
+  color: white;
+  overflow: hidden;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 ul.log li:last-child {
