--- a/src/resources/source/css/default.css
+++ b/src/resources/source/css/default.css
@@ -11,7 +11,7 @@ body {
   line-height: 1.5;
   color: black;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 body::-webkit-scrollbar {
@@ -620,7 +620,7 @@ div.path div.part a.edit .fa {
 /* Table header */
 
 .main > .container > div[item] {
-  overflow-x: auto;
+  // overflow-x: auto;
 }
 
 .main > .container > div[item]::-webkit-scrollbar {
