--- a/src/resources/source/css/default.css
+++ b/src/resources/source/css/default.css
@@ -383,7 +383,7 @@ nav .dropdown ul > li span {
   white-space: normal;
 }
 
-.sidebar ul li.active > a {
+.sidebar ul li.active a {
   color: dodgerblue;
 }
 
