Default avatar changed.

--- a/src/resources/source/css/default.css
+++ b/src/resources/source/css/default.css
@@ -281,8 +281,8 @@ nav .avatar .round-letter {
   border-radius: 50%;
   text-align: center;
   line-height: 4rem;
-  font-family: sans-serif;
-  font-size: 2rem;
+  font-family: Calibri, sans-serif;
+  font-size: 1.5rem;
   background-color: silver;
   color: white;
   overflow: hidden;
