--- a/src/resources/source/css/log.css
+++ b/src/resources/source/css/log.css
@@ -64,8 +64,8 @@ ul.log li .avatar .round-letter {
   border-radius: 50%;
   text-align: center;
   line-height: 3rem;
-  font-family: sans-serif;
-  font-size: 1.6rem;
+  font-family: Calibri, sans-serif;
+  font-size: 1.2rem;
   background-color: silver;
   color: white;
   overflow: hidden;
