--- a/src/resources/source/css/default.css
+++ b/src/resources/source/css/default.css
@@ -283,6 +283,7 @@ nav .avatar .round-letter {
   line-height: 4rem;
   font-family: Calibri, sans-serif;
   font-size: 1.5rem;
+  letter-spacing: -0.1rem;
   background-color: silver;
   color: white;
   overflow: hidden;
