--- a/src/resources/source/css/log.css
+++ b/src/resources/source/css/log.css
@@ -66,6 +66,7 @@ ul.log li .avatar .round-letter {
   line-height: 3rem;
   font-family: Calibri, sans-serif;
   font-size: 1.2rem;
+  letter-spacing: -0.1rem;
   background-color: silver;
   color: white;
   overflow: hidden;
