--- a/src/resources/source/css/default.css
+++ b/src/resources/source/css/default.css
@@ -636,6 +636,15 @@ div.item.hidden {
     display: none;
 }
 
+.item-component {
+    display: table;
+    margin: 0 0 1rem 0;
+    padding: 1rem 1rem;
+    border-radius: 4px;
+    background-color: #eee;
+    background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+}
+
 ul.header {
     margin: 0;
 }
@@ -964,19 +973,21 @@ table.elements > tbody > tr:last-child {
 
 table.elements > tbody > tr.chosen,
 table.elements > tbody > tr.checked.chosen {
-    background-color: #abf;
+    background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 }
 
 table.elements > tbody > tr.dragging {
     background-color: white;
 }
 
-table.elements > tbody > tr.checked {
-    background-color: #cee;
+table.elements > tbody > tr.checked:not(.chosen) {
+    background-color: #CDDCDC;
+    background-image: radial-gradient(at 50% 100%, rgba(255,255,255,0.50) 0%, rgba(0,0,0,0.50) 100%), linear-gradient(to bottom, rgba(255,255,255,0.25) 0%, rgba(0,0,0,0.25) 100%);
+    background-blend-mode: screen, overlay;
 }
 
 table.elements > tbody > tr.hover:not(.checked) {
-    background-color: #e7e8ff;
+    background-image: linear-gradient(to top, #dfe9f3 0%, #eefaff 100%);
 }
 
 table.elements > tbody > tr > td {
@@ -1272,7 +1283,9 @@ ul.pager > li.page input {
     display: table;
     margin-bottom: 0;
     border-radius: 4px;
-    background-color: #dee;
+    background-color: #CDDCDC;
+    background-image: radial-gradient(at 50% 100%, rgba(200,225,255,0.50) 0%, rgba(0,50,20,0.50) 100%), linear-gradient(to bottom, rgba(255,255,255,0.25) 0%, rgba(0,40,20,0.25) 100%);
+    background-blend-mode: screen, overlay;
     padding: 1rem;
 }
 
@@ -1800,7 +1813,7 @@ form .loadfile .reset {
 
 .confirm .favorite-settings {
     position: absolute;
-    top: 1.5rem;
+    top: 0;
     right: 0;
     width: 2rem;
     height: 2rem;
